# py_rdfc10

./: Readme.md  conftest.py  pyproject.toml
rdfc10/: __init__.py  commons.py  hash_1_degree_quads.py  hash_n_degree_quads.py  logger.py  rdfc10.py
tests/: test_graph_diff.py  test_rdfc10.py
tests/test_data/: series.nt  series.ttl  test012-in.nq  test013-rdfc10.nq  test069-in_TBD.nq  test069-rdfc10.nq  test200-in.nq  test201-in.nq  test901-in.nq  test901-rdfc10.nq
