
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py_rdfc10"
version = "0.1.0"
description = "A package for canonicalizing an rdflib graph"
requires-python = ">=3.8"
keywords = ["rdf", "rdflib", "canonicalization"]
dependencies = [
    "python-json-logger ~= 2.0.7",
    "rdflib ~= 7.0.0", 
]

[project.scripts]

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
